--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "nodemon": "^3.1.0",
     "pg": "^8.11.3",
     "pg-promise": "^11.5.4",
-    "pool": "^0.4.1"
+    "pool": "^0.4.1",
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
